Make lyrics editable when there's no currently no text

BUG: 266722